--- a/docker/php/docker-compose.yml
+++ b/docker/php/docker-compose.yml
@@ -1,27 +1,47 @@
+# services:
+#   php:
+#     build:
+#       context: .
+#       dockerfile: ./Dockerfile
+#     container_name: popsicle-app
+#     volumes:
+#       - /home/polygon/poysha:/var/www/html
+#     networks:
+#       - popsicle-net
+
+#   nginx:
+#     image: nginx:1.25
+#     container_name: popsicle-nginx
+#     ports:
+#       - "80:80"
+#     volumes:
+#       - .:/var/www/html
+#       - ../../docker/nginx/default.conf:/etc/nginx/conf.d/default.conf:ro
+#     depends_on:
+#       - php
+#     networks:
+#       - popsicle-net
+
+# networks:
+#   popsicle-net:
+
+
+#   version: '3.8'
+
 services:
-  php:
+  backend:
     build:
       context: .
-      dockerfile: ./Dockerfile
+      dockerfile: Dockerfile
     container_name: popsicle-app
     volumes:
-      - /home/polygon/poysha:/var/www/html
-    networks:
-      - popsicle-net
-
-  nginx:
-    image: nginx:1.25
-    container_name: popsicle-nginx
+      - .:/var/www/html
     ports:
       - "80:80"
-    volumes:
-      - .:/var/www/html
-      - ../../docker/nginx/default.conf:/etc/nginx/conf.d/default.conf:ro
-    depends_on:
-      - php
     networks:
       - popsicle-net
 
 networks:
   popsicle-net:
+
 
